--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
                 <div class="row">
 
                 <div class="col-auto">
-                    <input class="form-control" type="text" placeholder="Movie Show Title" name="query">
+                    <input class="form-control" type="text" placeholder="Movie Title" name="query">
                 </div>
                 <div class="col-auto">
                     <button class="btn btn-outline-dark">Search</button>
                 </div>
             </form>
+            <br>
+            <br>
+            <p>Search movie titles and pick your top 5!</p>
         </div>
     </div>
 
